# VectorKnowledgeBase

./: .gitignore  .replit  BackupSystem.md  LICENSE  README.md  Roadmap.md  api_specification.md  app.py  check_storage_api.py  chroma_cli.py  cleanup_progress.json  config.py  delete_one_history_file.py  delete_pdf_collection.py  diagnose_chroma.py  document_store.json  downloaded_test_chromadb.txt  faiss_index  history_analysis.txt  main.py  models.py  pyproject.toml  query_db.py  replit.nix  requirements.txt  storage_list.txt  test_api.sh  test_chroma_basic.py  test_object_storage.py  test_privacy_filter.py  test_query.sh  test_simple_storage.py  upload_test.sh  upload_tool.py
api/: auth.py  routes.py
chroma_db_backup_20250314_024320/: chroma.sqlite3
chroma_db_dev/: chroma.sqlite3
docs/: Authentication.md  README.md  README_PRIVACY.md  Roadmap.md  api_specification.md  authentication.md  chat_history_log.md  pii_implementation_guide.md  pii_protection.md  privacy_and_pii_protection.md  privacy_controls.md  privacy_demo.py  replit_secrets_guide.md  user_pii_guide.md
schemas/: requests.py  responses.py
services/: embedding_service.py  pdf_processor.py  vector_store.py
templates/: diagnostics.html  error.html  index.html  layout.html  login.html
utils/: STORAGE_CLEANUP_README.md  backup_chroma.py  check_chromadb.py  check_db_reset_issues.py  chroma_cli.py  clean_local_backups.py  clean_storage_history.py  clear_history_backups.py  delete_backup_history.py  delete_pdf_documents_collection.py  diagnose_chroma.py  direct_cleanup.py  fix_chroma_db.py  (+14 more)
(+8 files in other folders)
