[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "api>=0.0.7",
    "email-validator>=2.2.0",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.11",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.3",
    "openai>=1.65.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "flask-wtf>=1.2.2",
    "psutil>=7.0.0",
    "pymupdf>=1.25.3",
]
